# FunctionInterpolation

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  data.txt  Отчет.docx
gui/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  mainwindow.cpp  mainwindow.h
lagrange/: lagrange.cpp  lagrange.h  main.cpp
spline/: main.cpp  spline.cpp  spline.h
tests/: test.cpp
